# Experiments

./: .directory  .gitignore  README.md
EstimateE/: .directory  CMakeLists.txt
FitCameraPose/: CMakeLists.txt  ChangeFormat.cpp  Headers.h  ShapeMatching.cpp  Utils.cpp  Utils.h  View.cpp  View.h  main.cpp
PathCalibration/src/: Calibrator.cpp  main.cpp
ReconstructThin/: BlenderUtils.py  CMakeLists.txt  README.md  Render.py  RenderCurves.py  ShowCurves.py  note.md
ReconstructThin/data/: Cameras.txt  curves.json  mesh.ply
ReconstructThin/src/: Algorithms.cpp  Algorithms.h  Bend.cpp  Bend.h  Curve3d.h  DistMap.cpp  DistMap.h  DistriMap.cpp  DistriMap.h  GenLine3D.cpp  Headers.h  LineGenerator.cpp  LineGenerator.h  Main.cpp  Map2D.cpp  Map2D.h  MapGenerator.h  RotateMain.cpp  SuitMain.cpp  TestTetra.cpp  Tetra.cpp  Tetra.h  Utils.cpp  Utils.h
