CMAKE_MINIMUM_REQUIRED(VERSION 3.0)
PROJECT(thin)
SET(CMAKE_CXX_STANDARD 11)
SET(THIRDPARTY_DIR ${PROJECT_SOURCE_DIR}/../ThirdParty)

# Eigen
INCLUDE_DIRECTORIES(${THIRDPARTY_DIR}/Eigen)

# Line3Dpp
INCLUDE_DIRECTORIES(${THIRDPARTY_DIR}/Line3Dpp/build)
INCLUDE_DIRECTORIES(${THIRDPARTY_DIR}/Line3Dpp)
LINK_DIRECTORIES(${THIRDPARTY_DIR}/Line3Dpp/build)

# openCV
FIND_PACKAGE(OpenCV REQUIRED COMPONENTS core imgproc highgui imgcodecs)

SET(SOURCE_FILES src/Bend.h src/Bend.cpp src/Curve3d.h src/Curve3d.cpp)
SET(SOURCE_FILES ${SOURCE_FILES} src/LineGenerator.h src/LineGenerator.cpp src/Main.cpp)
SET(SOURCE_FILES ${SOURCE_FILES} src/Map2D.h src/Map2D.cpp)

ADD_EXECUTABLE(main ${SOURCE_FILES})

TARGET_LINK_LIBRARIES(GenLine3D line3Dpp boost_system boost_chrono)
TARGET_LINK_LIBRARIES(GenLine3D ${OpenCV_LIBS})